# ai-memory-vault

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  open.ts  projects.ts  sessions.ts
frontend/src/components/layout/: Header.tsx
frontend/src/components/projects/: ProjectList.tsx
frontend/src/components/sessions/: SessionList.tsx
frontend/src/components/ui/: CopyButton.tsx  SourceBadge.tsx  Spinner.tsx
frontend/src/components/viewer/: Message.tsx  SessionViewer.tsx
src/ai_memory_vault/: __init__.py  cli.py  config.py  resolver.py  search.py  setup_wizard.py  status.py  tree.py  utils.py
src/ai_memory_vault/agents/: __init__.py  base.py  claude.py  codex.py  registry.py
src/ai_memory_vault/application/: __init__.py  export_service.py  session_loader.py
src/ai_memory_vault/domain/: __init__.py  memories.py  models.py  project_tree.py  search.py  status.py
src/ai_memory_vault/exporters/: markdown.py
src/ai_memory_vault/extractors/: __init__.py  claude.py  codex.py  codex_memory.py  models.py
src/ai_memory_vault/infrastructure/: __init__.py
src/ai_memory_vault/infrastructure/exporters/: __init__.py  markdown.py
src/ai_memory_vault/infrastructure/extractors/: __init__.py  claude.py  codex.py  codex_memory.py
src/ai_memory_vault/infrastructure/sync/: __init__.py  git.py
src/ai_memory_vault/interfaces/: __init__.py  cli.py
src/ai_memory_vault/server/: _loader.py  app.py
src/ai_memory_vault/server/routes/: open.py  projects.py  sessions.py
src/ai_memory_vault/server/static/: index.html
src/ai_memory_vault/sync/: git.py
tests/: test_agent_registry.py  test_sync_git.py
